Corrections in index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Also, these methods have been tested only on GNU/Linux.\n",
     "\n",
-    "# Anantomy of a Scientific paper\n",
+    "# Anatomy of a Scientific paper\n",
     "\n",
     "Many schemes (see [2]-[5]) have been proposed for how to oraganize a paper or how to read it (fast).\n",
     "Definitly, one needs a method to be able to keep up with the pace of publications.\n",
@@ -147,6 +147,7 @@
     " - install: folder containing installation methods\n",
     " - resources: images, etc.\n",
     " - reviews: containing the notebooks organised form the research field.\n",
+    " - index.ipynb\n",
     " - Template.ipynb: the Template used to create all the notebooks\n",
     " - README.md: this readme.\n",
     "\n",
