Correction of typos in privacy/Location\ Privacy\ in\ Pervasive\ Computing.ipynb

--- a/reviews/privacy/Location Privacy in Pervasive Computing.ipynb
+++ b/reviews/privacy/Location Privacy in Pervasive Computing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# [Location Privacy in Pervasive Computing](https://www.cl.cam.ac.uk/~fms27/papers/2003-BeresfordSta-location.pdf)\n",
     " - Authors: Alastair R. Beresford and Frank Stajano\n",
-    " - Reviewer: Djibrilla Amadou Kountché"
+    " - Reviewer: Djibrilla Amadou Kountche"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Abstract\n",
-    "- Location-awere applications track movement for conveniance but threat privacy\n",
+    "- Location-aware applications track movement for conveniance but threat privacy\n",
     "- Presents the concept of Mix Zones and metrics to assess user anonymity"
    ]
   },
@@ -51,9 +51,9 @@
     "- Locaiton privacy:\n",
     "   - is the ability to prevent other parties from learning one's current or past location\n",
     "   - form of information privacy\n",
-    "   - is also the ability to be in control :\n",
+    "   - is also the ability to be in control:\n",
     "      - let some application access to the position and others not\n",
-    "   - there conflicts with other goals\n",
+    "   - therefore conflicts with other goals\n",
     "\n",
     "- Some applications can be accessed: \n",
     " - completly anonymously\n",
@@ -69,7 +69,7 @@
     "\n",
     "- Assuming using  anonymization proxies will not break existing application, how this approach improves location privacy ?\n",
     "\n",
-    "- Using a long-term pseudonym for each user does not provide much privacy, even if user gives out different pseudonyms to different application to avoid collunison:\n",
+    "- Using a long-term pseudonym for each user does not provide much privacy, even if user gives out different pseudonyms to different application to avoid collusion:\n",
     "\n",
     "    - certains regions in spaces acts as homes (are strongly associated with certain identities)\n",
     "    \n",
@@ -77,17 +77,15 @@
     "         1. Where does any given pseudonym spent most of its time ?\n",
     "         2. Who spend more time than anyone else at a given position ? \n",
     "\n",
-    "\n",
-    "\n",
     "### Threat model \n",
     "\n",
     " - User cannot always refuse to be tracked\n",
     " - User have no control on the application and cannot trust application providers\n",
     " - User can trust positioning systems where the positioning is local (for other positioning systems it depends)\n",
-    " - Availability of nationwide network of face-recognition (like CCTV cameras)\n",
+    " - Availability of nationwide network or face-recognition (like CCTV cameras)\n",
     " \n",
     "### Adversary model \n",
-    "  - Application providers migth collude against the user to discobver the information the user aim to hide\n",
+    "  - Application providers might collude against the user to discover the information the user aim to hide\n",
     "  - All application as one global hostile observer\n",
     "  - The system spatial and temporal resolution can be high\n",
     "  "
@@ -107,14 +105,12 @@
     "### Hypothesis\n",
     "1. A middleware event model through which entities entering or exiting a predefined region of space generates events. Applications register their interrest in a particular set of locations and locatables and receive callbacks when the corresponding events occurred \n",
     "2. The middleware is trusted and may help users to hide their identity\n",
-    "3. Users registers interest in particular application with the middleware\n",
+    "3. Users register interest in particular application with the middleware\n",
     "4. Application receives event callbacks from the middleware when user enter, moves or exits the application-defined area\n",
     "5. Each update period, the middleware determines wheter any event have occured and issues callbacks  to application when appropriate\n",
-    "6. Availability of an  anonimyzation proxy for all communications between users and application \n",
+    "6. Availability of an  anonymization proxy for all communications between users and application \n",
     "\n",
     "\n",
-    "\n",
-    " \n",
     "### Definitions\n",
     "\n",
     "- David Chaum proposes for anonymous communication:\n",
@@ -132,8 +128,8 @@
     "\n",
     "## Mix zones \n",
     "\n",
-    "- A mix zone is :  \n",
-    "  - for a group of user a connected spatial region of maximum size in which none of these users has registered any application callback. For a given group of users there migth be several distinct mix zone\n",
+    "- A mix zone is:  \n",
+    "  - for a group of user a connected spatial region of maximum size in which none of these users has registered any application callback. For a given group of users there might be several distinct mix zone\n",
     "  - analogous to mix node\n",
     "  \n",
     "\n",
@@ -141,19 +137,20 @@
     "\n",
     "- The middleware can define the mix zone apriori or calculate them separatly for each group of users as the spatial areas currently not in an application zone \n",
     "\n",
-    "- Application do not receive any information when user are in the mix zone (identities are mixed)\n",
+    "- Applications do not receive any information when users are in the mix zone (identities are mixed)\n",
     "\n",
-    "- Assuming users change to a new and unsuded pseudonym whenever they enter a mix zone, applications that see a user emerging from the mix zone cannot distinguish that  a user from any other who was in the mix zone at the same time and cannot link people going into the mix zone with those coming out of it\n",
+    "- Assuming users change to a new and unused pseudonym whenever they enter a mix zone, applications that see a user emerging from the mix zone cannot distinguish that  a user from any other who was in the mix zone at the same time and cannot link people going into the mix zone with those coming out of it\n",
     "\n",
-    "- If a mix zone has a diameter $(D)$ much larger than the distance $(d(u,m))$ the user can cover during one location update period, it migth not mix users adequatly. For example the figutre below :\n",
+    "- If a mix zone has a diameter $(D)$ much larger than the distance $(d(u,m))$ the user can cover during one location update period, it might not mix users adequatly. For example the figutre below :\n",
     "\n",
-    "![mix zone](mixzone.png)\n",
+    "![mix zone](../../resources/images/mixzone.png)\n",
+    "*This image was taken from the paper* \n",
     "\n",
     "### Anonymity sets\n",
     "\n",
-    "- For each mix zone that user $u$ visits during time period $t$, the anonimity set is the group of people visiting the mix zone during the same time period\n",
+    "- For each mix zone that a user $u$ visits during the time period $t$, the anonimity set is the group of people visiting the mix zone during the same time period\n",
     "- User can set a threshold on the anonymity set size\n",
-    "- this value can be approach by a probability function (time dependant) :\n",
+    "- this value can be approach by a probability function (time dependant):\n",
     "     - Can estimane the average value \n",
     "\n",
     " \n",
@@ -174,7 +171,7 @@
     "\n",
     "- How a user should react to a warning that the measured anonymity is failling below a certain threshold ? :\n",
     "    - Stop divulging location information\n",
-    "    - Reduce the the size or number of the applications in which a user has registerd\n",
+    "    - Reduce the size or number of the applications in which a user has registerd\n",
     "- \"Reconciling privacy with application functionality is still, in general, an open problem.\"\n",
     "\n",
     "### Improving the models\n",
@@ -183,7 +180,7 @@
     "\n",
     "### Dummy users\n",
     "\n",
-    "- Dummy users as dummy messages but :\n",
+    "- Dummy users as dummy messages but:\n",
     "    - can be a waste of ressources\n",
     "    - difficult to construct\n",
     "\n",
@@ -206,7 +203,7 @@
     "## Experimentation\n",
     "\n",
     "- Type : Physical data collection using BAT location system\n",
-    "- We try to reproduce the results from the given datas\n"
+    "- Here is a trial to reproduce the results from the given data\n"
    ]
   },
   {
@@ -215,7 +212,7 @@
    "source": [
     "### Observation on Anonymity sets\n",
     "\n",
-    "- Anonymity sets is only a good measure of anonymity when all the members of the set are equally likely to be the one of interest to the observer (maxiaml entropy)\n",
+    "- Anonymity sets is only a good measure of anonymity when all the members of the set are equally likely to be the one of interest to the observer (maximal entropy)\n",
     "\n",
     "- For a set of $n$ elements equiprobable, we need \n",
     "$\\log_2(n)$\n",
@@ -232,15 +229,15 @@
     " - A movement Matrix $M$:\n",
     "   - records for all possible $(p,s)$ pairs the number of times a person who was in $z$ at $t$ was in $p$ at $t-1$ and in $s$ in $t+1$\n",
     "   \n",
-    " - Therefore the joint probability can be determined :\n",
+    " - Therefore the joint probability can be determined:\n",
     "   \n",
-    "   $P(prec=p, subs=s) = \\frac{M(p,s)}{\\sum_{i,j}{M(i,j}}$\n",
+    "   $P(prec=p, subs=s) = \\frac{M(p,s)}{\\sum_{i,j}{M(i,j)}}$\n",
     " \n",
-    " - The conditional probaility :\n",
+    " - The conditional probaility:\n",
     " \n",
-    "   $P(prec=p | subs=s) = \\frac{M(p,s)}{\\sum_{j}{M(p,j}}$\n",
+    "   $P(prec=p | subs=s) = \\frac{M(p,s)}{\\sum_{j}{M(p,j)}}$\n",
     "   \n",
-    " - The entropy :\n",
+    " - The entropy:\n",
     " \n",
     " $h = - \\sum p_i \\dot \\log p_i$\n",
     " \n",
@@ -315,12 +312,12 @@
    "source": [
     "### Impact of user movement model on anonymity in the mix zone\n",
     "\n",
-    "- Given two user:\n",
+    "- Given two users:\n",
     "    - walking in opposite directions (one east to west, one west to east)\n",
     "    - they pass throug the empty mix zone in the same time period\n",
     "    - An observer knows from the application zones that the users went to mix zone and the directions they came from\n",
-    "    - The observer can know that the user came out of the mix zone with new pseudonyms\n",
-    "    - The observer want to link  the pseudonyms (find out whether they both went straigth ahead or each made a uturn)\n",
+    "    - The observer can know that the users came out of the mix zone with new pseudonyms\n",
+    "    - The observer want to link  the pseudonyms (find out whether they both went straight ahead or each made a uturn)\n",
     "         - Without any apriori knowledge, the information content of this alternative is one full bit\n",
     "         - By using the movement matrix, the observer can guess the answer with a chance of success better than random\n",
     "    "
@@ -495,12 +492,10 @@
     "### Pros\n",
     "- Interesting to read\n",
     "- Introduce the notion of mix zone\n",
-    "- Use as a basis for our papers:\n",
-    "   - formalise the notion of distance, diameter, etc\n",
+    "- Interesting point to study:\n",
+    "   - formalize the notion of distance, diameter, etc\n",
     "   - adapt to the case that the movement pattern is longer than 2\n",
-    "   - address the research problems indicated\n",
-    "\n",
-    "### Cons"
+    "   - address the research problems indicated"
    ]
   },
   {
