Correction in Protecting Location Privacy with Dynamic Mac Address Exchanging in Wireless Networks

--- a/reviews/privacy/Protecting Location Privacy with Dynamic Mac Address Exchanging in Wireless Networks.ipynb
+++ b/reviews/privacy/Protecting Location Privacy with Dynamic Mac Address Exchanging in Wireless Networks.ipynb
@@ -94,7 +94,6 @@
     "  - Dynamically assigning MAC address to the hosts as in DHCP\n",
     "  - MAC address shuffle among the clients of a WLAN without exposing their exchange relation and frequently disrupting their current connection\n",
     "\n",
-    "\n",
     "- Key ideas: \n",
     "   - a node acquires and changes its MAC address dynamically in the service area of an Access Point\n",
     "   - the address pool for the acquisition and exchange consists of initial publicly known MAC addresses and all the addresses that have participated in the service within a time period\n",
@@ -117,7 +116,8 @@
     "\n",
     "The architecture is illustrated on the Figure:\n",
     "\n",
-    "![DMAS Architecture](dmas_architecture.png)"
+    "![DMAS Architecture](../../resources/images/dmas_architecture.png)\n",
+    "               * Image taken from the paper *"
    ]
   },
   {
@@ -126,12 +126,12 @@
    "source": [
     "#### Association procedure\n",
     "\n",
-    "A station :\n",
+    "A station:\n",
     "\n",
     "- will use a Special MAC Address (SMA) in the beacon frames as source address instead of its true MAC address\n",
     "- shares a secret key and a Temporary client ID (TCID) with the Authentication Server\n",
     "\n",
-    "The authentication process :\n",
+    "The authentication process:\n",
     "\n",
     "1. A station $S$ sends associaition requests to AP with ${HNID, Encrypt(TCID, Password, R_s)}$\n",
     "2. AS uses $(TCID, Password)$ to verify if the $TCID$ is a valid station. The AS sends a MAC Address Request to it's DMAS\n",
@@ -151,7 +151,6 @@
     "\n",
     "- MAC address changing candidates will form a random circle $(C_1 \\rightarrow C_2 \\rightarrow \\cdots C_n\\rightarrow C_1)$\n",
     "- Then the MAC are changed according to $(C_1 \\leftarrow C_2 \\leftarrow \\cdots C_n\\leftarrow C_1)$ and so on\n",
-    "\n",
     "- A station will only know it's next MAC address, but will not be able to determine who will use its original MAC \n",
     "\n",
     "The shuffle procedure:\n",
@@ -180,7 +179,7 @@
     "\n",
     "An example is given by figure below.\n",
     "\n",
-    "![DMAS Shuffle](dmas_shuffle.png)\n",
+    "![DMAS Shuffle](../../resources/images/dmas_shuffle.png)\n",
     "\n",
     "#### Problems identified\n",
     "- Address duplication:  when a node answer to the PSM, but did not change its MAC address (due to missing DMAS message or other attacks) \n",
@@ -202,7 +201,7 @@
    "source": [
     "Given :\n",
     "- $\\alpha$: the probability that a node will not join the shuffle\n",
-    "- the scheme is resitant to the long distance tracing accross APs\n",
+    "- the scheme is resistant to the long distance tracing accross APs\n",
     "- when the AP zone is empty, the server will pick up an address from the backup pool\n",
     "\n",
     "### The probability that $n$ nodes are present in the AP\n",
@@ -525,7 +524,6 @@
     "## Reader's remarks\n",
     "\n",
     "### Pros\n",
-    "- However some good points \n",
     "- attemps to formalise the MAC address change strategies with probabilities\n",
     "\n",
     "\n",
