Corrections in reviews/privacy/Support\ of\ Anonymity\ in\ VANETs\ Putting\ Pseudonymity\ into\ Practice.ipynb

--- a/reviews/privacy/Support of Anonymity in VANETs Putting Pseudonymity into Practice.ipynb
+++ b/reviews/privacy/Support of Anonymity in VANETs Putting Pseudonymity into Practice.ipynb
@@ -32,7 +32,7 @@
     "- Because:\n",
     "  - unique identifiers for communication can make vehicles easily traceable and localizable\n",
     "  - protection of dirver's privacy by the use of changing pseudonyms\n",
-    "  - exisiting works neglect pratical implications and realizability and focus on pseudonym change"
+    "  - existing works neglect pratical implications and realizability and focus on pseudonym change"
    ]
   },
   {
@@ -57,7 +57,6 @@
     "   - time\n",
     "\n",
     "- Crypthography and encryption are not appropriate since exchange of information is mandatory for network operation\n",
-    "\n",
     "- Use of pseudonyms to avoid disclosing the true identity but:\n",
     "\n",
     "     - Pseudonymity only considerably aggravates the association of pseudonym and user identity, but cannot prevent an attacker to collect personal data\n",
@@ -69,7 +68,7 @@
     "### Architecture of VANET \n",
     "\n",
     "As described on the Figure \n",
-    "![VANET achitecture](vanet.png \"The VANET architecture considered in the paper\")\n",
+    "![VANET achitecture](../..//resources/images/vanet.png \"The VANET architecture considered in the paper\")\n",
     "\n",
     "-  In-vehicle sub-network contains:\n",
     "    - On Board Unit (OBU)\n",
@@ -508,7 +507,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def timeIfaceUp():\n",
@@ -524,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def timeIfaceDown():\n",
@@ -540,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def timeMAC():\n",
@@ -556,7 +561,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def timeRoute():\n",
@@ -582,7 +589,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Determine the local time a node need to change the Pseudonym (Tlpc)\n",
@@ -611,6 +620,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -649,7 +659,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Determine the time imposed by pseudonym change on packet forwarding\n",
@@ -685,7 +697,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This test requires that :\n",
@@ -870,7 +884,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Prints the definifion:\n",
